<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/campaignDetailsScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/empty_divider_10dp_vertical"
            android:orientation="vertical"
            android:paddingHorizontal="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="80dp"
            android:showDividers="middle">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/badge_dollar"
                android:layout_width="35dp"
                android:layout_height="19dp"
                android:visibility="gone"
                app:cardBackgroundColor="#100046"
                app:cardCornerRadius="100dp"
                app:strokeColor="@android:color/transparent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/defaultIconContentDescription"
                        app:srcCompat="@drawable/ic_dollar"
                        app:tint="#FFFFFF" />

                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/badge_promo"
                android:layout_width="35dp"
                android:layout_height="19dp"
                android:visibility="gone"
                app:cardBackgroundColor="#100046"
                app:cardCornerRadius="100dp"
                app:strokeColor="@android:color/transparent">

                <RelativeLayout
                    android:layout_width="33dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/defaultIconContentDescription"
                        app:srcCompat="@drawable/ic_percentage"
                        app:tint="#FFFFFF" />

                </RelativeLayout>


            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/campaignDetailsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/campaignTitleDefault"
                android:textAppearance="@style/TextAppearance.App.TitleLarge" />

            <TextView
                android:id="@+id/campaignDetailsOrganization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campaignOrganizationDefault"
                android:textAppearance="@style/TextAppearance.App.TitleSmall"
                android:textColor="#083544" />

            <TextView
                android:id="@+id/campaignDetailsExpiration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/campaignEndDateDefault"
                android:textAppearance="@style/TextAppearance.App.BodyMedium"
                android:textColor="#49454F"
                android:visibility="gone" />

            <TextView
                android:id="@+id/subtitle_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="Zona interessata"
                android:textAppearance="@style/TextAppearance.App.TitleLarge"
                android:visibility="gone" />


            <FrameLayout
                android:id="@+id/map_container"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:visibility="gone">

            </FrameLayout>

            <TextView
                android:id="@+id/campaignDetailsDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/campaignDescriptionDefault"
                android:textAppearance="@style/TextAppearance.App.BodyMedium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/campaignDetailsDataSubtitle"
                android:textAppearance="@style/TextAppearance.App.TitleLarge" />

            <TextView
                android:id="@+id/campaignDetailsSensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/campaignDetailsDefaultRequiredSensor"
                android:textAppearance="@style/TextAppearance.App.BodyMedium" />

            <TextView
                android:id="@+id/campaignDetailsInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/campaignDetailsInterval"
                android:textAppearance="@style/TextAppearance.App.BodyMedium" />

            <TextView
                android:id="@+id/campaignDetailsSubmissions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/campaignDetailsSubmissions"
                android:textAppearance="@style/TextAppearance.App.BodyMedium" />

            <TextView
                android:id="@+id/campaignDetailsPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/campaignDetailsPoints"
                android:textAppearance="@style/TextAppearance.App.BodyMedium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pointsDistributionInfo"
                android:textAppearance="@style/TextAppearance.App.BodyMedium"
                tools:ignore="VisualLintLongText" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/campaignDetailsActionButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#BA1A1A"
            android:fontFamily="@font/roboto_medium"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:text="@string/authorizeButtonText"
            android:textSize="14sp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>